BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/MC_Cycle_Plan_vod__c.object
<CustomObject>
    <description>The Cycle Plan object holds a list of target accounts for a specified time frame.</description>
    <fields>
        <fullName>Channel_Interaction_Attainment_vod__c</fullName>
        <description>Calculated percentage of Channel Interactions Earned / Channel Interactions Goal</description>
        <label>Channel Interaction Attainment</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Channel_Interaction_Status_vod__c</fullName>
        <description>Comparing the Cycle Plan&apos;s Channel Attainment and the % Cycle Completed.</description>
        <label>Channel Interaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>On_Schedule_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under_Reached_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over_Reached_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Interactions_Earned_vod__c</fullName>
        <description>Sum of all Target Channel Interactions Earned.</description>
        <label>Channel Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Interactions_Goal_vod__c</fullName>
        <description>Sum of all Target Channel Interaction Goals.</description>
        <label>Channel Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_BMS_SHARED__c</fullName>
        <description>VPRO Latam June-2015: created to anticipate sharing rules which will support country-specific visibility rules. Formula field looking at the Cycle Country.</description>
        <formula>Cycle_vod__r.Country_BMS_SHARED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Cycle that this Cycle Plan is associated with</description>
        <label>Cycle</label>
        <referenceTo>MC_Cycle_vod__c</referenceTo>
        <relationshipLabel>Cycle Plan</relationshipLabel>
        <relationshipName>MC_Cycle_Plans_vod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Remaining_vod__c</fullName>
        <description>Days remaining in the Cycle Plan</description>
        <label>Days Remaining</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Total_vod__c</fullName>
        <description>Total Days in the Cycle Plan</description>
        <label>Days Total</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Brief description or comments of the Cycle Plan.</description>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>End Date of the Cycle Plan</description>
        <formula>Cycle_vod__r.End_Date_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External ID for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Goal_Edit_Status_vod__c</fullName>
        <description>Status of the goal editing process</description>
        <label>Goal Edit Status</label>
        <picklist>
            <picklistValues>
                <fullName>New_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Calculated_vod__c</fullName>
        <description>Date and time the Cycle Plan was last calculated.</description>
        <label>Last Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the entire MCCP will become read-only</description>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Lookup_BMS_EMEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BMS ACN - June 2016: Lookup to user to display user specific information. Created as part of the MCCP Project.</description>
        <label>Owner Lookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MC_Cycle_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Cycle_Completed_vod__c</fullName>
        <description>Indicates the amount of time as a percent that has elapsed from the Start Date the Cycle Plan. The value will not exceed 100%.</description>
        <label>% Cycle Completed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Interaction_Attainment_vod__c</fullName>
        <description>Calculated percentage of Product Interactions Earned / Product Interactions Goal</description>
        <label>Product Interaction Attainment</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Interaction_Status_vod__c</fullName>
        <description>Comparing the Cycle Plan&apos;s Product Attainment and the % Cycle Completed.</description>
        <label>Product Interaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>On_Schedule_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under_Reached_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over_Reached_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Interactions_Earned_vod__c</fullName>
        <description>Sum of all Target Product Interactions Earned.</description>
        <label>Product Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Interactions_Goal_vod__c</fullName>
        <description>Sum of all Target Product Interaction Goals.</description>
        <label>Product Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Start Date of the Cycle Plan</description>
        <formula>Cycle_vod__r.Start_Date_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Indicates the Status of the Cycle Plan.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In_Progress_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Attainment_vod__c</fullName>
        <description>Calculated percentage of Team Channel Interactions Earned / Team Channel Interactions Goal</description>
        <label>Team Channel Attainment</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Interactions_Earned_vod__c</fullName>
        <description>Sum of all Target Team Channel Interactions Earned.</description>
        <label>Team Channel Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Interactions_Goal_vod__c</fullName>
        <description>Sum of all Target Team Channel Interaction Goals.</description>
        <label>Team Channel Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Status_vod__c</fullName>
        <description>Comparing the Cycle Plan&apos;s Team Channel Attainment and the % Cycle Completed.</description>
        <label>Team Channel Status</label>
        <picklist>
            <picklistValues>
                <fullName>On_Schedule_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under_Reached_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over_Reached_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Product_Attainment_vod__c</fullName>
        <description>Calculated percentage of Team Product Interactions Earned / Team Product Interactions Goal</description>
        <label>Team Product Attainment</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Product_Interactions_Earned_vod__c</fullName>
        <description>Sum of all Target Team Product Interactions Earned.</description>
        <label>Team Product Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Interactions_Goal_vod__c</fullName>
        <description>Sum of all Target Team Product Interaction Goals.</description>
        <label>Team Product Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Status_vod__c</fullName>
        <description>Comparing the Cycle Plan&apos;s Team Product Attainment and the % Cycle Completed.</description>
        <label>Team Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>On_Schedule_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under_Reached_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over_Reached_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>Territory for the Cycle Plan</description>
        <label>Territory</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>System set to prevent duplicate Cycle Plans for a single Territory for a Cycle. Value = Cycle_vod__c + __ + Territory_vod</description>
        <externalId>true</externalId>
        <label>Veeva External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MC Cycle Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cycle_vod__c</columns>
        <columns>Territory_vod__c</columns>
        <columns>Status_vod__c</columns>
        <columns>Last_Calculated_vod__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cycle Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Cycle Plans</pluralLabel>
    <recordTypes>
        <fullName>Cycle_Plan_vod</fullName>
        <active>true</active>
        <description>Standard Cycle Plan</description>
        <label>Cycle_Plan_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BMS_EMEA_MC_CyclePlan_Prevent_Edit</fullName>
        <active>true</active>
        <description>BMS ACN - Q1 GRM 2017 - VR to prevent users from modifying the values on the MC Cycle Plan when unlocked for Goal Edit.</description>
        <errorConditionFormula>IF( 
OR(
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;PT1&quot;,
$Profile.Name = &quot;BMS - Integration User&quot;),

False,

OR(
ISCHANGED(OwnerId),
ISCHANGED(Territory_vod__c), 
ISCHANGED(Status_vod__c),
ISCHANGED(Cycle_vod__c),
ISCHANGED(Name)))</errorConditionFormula>
        <errorMessage>You are not allowed to perform this action! Please click Cancel.</errorMessage>
    </validationRules>
</CustomObject>